prototyping/react-multi-step-form/src/custom.scss
// hike-up variables
$hu-green: #00b7af;
$hu-blue: #2e84dd;
$hu-red: #ff435a;
$hu-nav: #26405a;
$hu-green-1: #54bdbf;
$hu-green-2: #009b94;
$hu-grey: #8c8c8c;
$hu-grey-1: #e3e6e9;
$hu-dark: #151515;

// import fonts
@import url("https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,400;0,700;1,400;1,700&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Quicksand&display=swap");

// Override default variables before importing Bootstrap
$headings-font-family: "Karla", sans-serif;
$font-family-sans-serif: "Quicksand", sans-serif;

$theme-colors: (
  "primary": $hu-green,
  "secondary": $hu-blue,
  "danger": $hu-red,
  "hu-grey": $hu-grey,
  "hu-grey-1": $hu-grey-1,
);

// inputs
$input-bg: $hu-grey-1;
$input-color: black;
$input-placeholder-color: $hu-grey;

// subtitles
$text-muted: $hu-grey;

$border-radius-lg: 1rem; // default is .3rem

$enable-responsive-font-sizes: true;

// Import Bootstrap and its default variables
@import "~bootstrap/scss/bootstrap.scss";

:disabled {
  cursor: not-allowed;
}

.btn-lg {
  border-radius: 0.3rem;
}

// input style
.form-control {
  caret-color: $hu-green;
  border: 0;
  padding: 0;
  border-radius: 0;
  border-bottom: 2px solid $hu-green;
  // box-shadow: 0 3px 2px -2px $hu-green; // whatever you set the blur to (3rd value), set the spread (4th value) to the negative of it to have it only show on the bottom

  &:focus {
    border: 0;
    box-shadow: none;
  }
}

// rating component
.rating {
  display: flex;
  width: 100%;
  justify-content: flex-end;
  overflow: hidden;
  flex-direction: row-reverse;
  height: 4rem;
  position: relative;
  margin-left: -5px;

  > input {
    display: none;

    &:checked ~ label,
    &:checked ~ label ~ label {
      background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' width='126.729' height='126.73'%3e%3cpath fill='%23fcd93a' d='M121.215 44.212l-34.899-3.3c-2.2-.2-4.101-1.6-5-3.7l-12.5-30.3c-2-5-9.101-5-11.101 0l-12.4 30.3c-.8 2.1-2.8 3.5-5 3.7l-34.9 3.3c-5.2.5-7.3 7-3.4 10.5l26.3 23.1c1.7 1.5 2.4 3.7 1.9 5.9l-7.9 32.399c-1.2 5.101 4.3 9.3 8.9 6.601l29.1-17.101c1.9-1.1 4.2-1.1 6.1 0l29.101 17.101c4.6 2.699 10.1-1.4 8.899-6.601l-7.8-32.399c-.5-2.2.2-4.4 1.9-5.9l26.3-23.1c3.8-3.5 1.6-10-3.6-10.5z'/%3e%3c/svg%3e");
    }

    &:not(:checked) ~ label:hover,
    &:not(:checked) ~ label:hover ~ label {
      background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' width='126.729' height='126.73'%3e%3cpath fill='%23d8b11e' d='M121.215 44.212l-34.899-3.3c-2.2-.2-4.101-1.6-5-3.7l-12.5-30.3c-2-5-9.101-5-11.101 0l-12.4 30.3c-.8 2.1-2.8 3.5-5 3.7l-34.9 3.3c-5.2.5-7.3 7-3.4 10.5l26.3 23.1c1.7 1.5 2.4 3.7 1.9 5.9l-7.9 32.399c-1.2 5.101 4.3 9.3 8.9 6.601l29.1-17.101c1.9-1.1 4.2-1.1 6.1 0l29.101 17.101c4.6 2.699 10.1-1.4 8.899-6.601l-7.8-32.399c-.5-2.2.2-4.4 1.9-5.9l26.3-23.1c3.8-3.5 1.6-10-3.6-10.5z'/%3e%3c/svg%3e");
    }
  }

  > label {
    cursor: pointer;
    width: 40px;
    height: 40px;
    margin-top: auto;
    margin-bottom: auto;
    background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' width='126.729' height='126.73'%3e%3cpath fill='%23ffffff' d='M121.215 44.212l-34.899-3.3c-2.2-.2-4.101-1.6-5-3.7l-12.5-30.3c-2-5-9.101-5-11.101 0l-12.4 30.3c-.8 2.1-2.8 3.5-5 3.7l-34.9 3.3c-5.2.5-7.3 7-3.4 10.5l26.3 23.1c1.7 1.5 2.4 3.7 1.9 5.9l-7.9 32.399c-1.2 5.101 4.3 9.3 8.9 6.601l29.1-17.101c1.9-1.1 4.2-1.1 6.1 0l29.101 17.101c4.6 2.699 10.1-1.4 8.899-6.601l-7.8-32.399c-.5-2.2.2-4.4 1.9-5.9l26.3-23.1c3.8-3.5 1.6-10-3.6-10.5z'/%3e%3c/svg%3e");
    background-repeat: no-repeat;
    background-position: center;
    background-size: 76%;
    transition: 0.3s;
  }
}

.rating-0 {
  filter: grayscale(100%);
}

// subtitles
.subtitles {
  font-style: italic;
}
label > .subtitles {
  margin-bottom: 0rem;
}

// remove arrows on input type number
/* Chrome, Safari, Edge, Opera */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}
/* Firefox */
input[type="number"] {
  -moz-appearance: textfield;
}

// remove resize corner on textarea
textarea {
  resize: none;
  overflow: hidden;
}

// speech bubble for questions
.speech-bubble-question {
  position: relative;
}
.speech-bubble-question:after {
  content: "";
  position: absolute;
  left: 0;
  top: 50%;
  width: 0;
  height: 0;
  border: 0.6rem solid transparent;
  border-right-color: $hu-grey-1;
  border-left: 0;
  margin-top: -0.6rem;
  margin-left: -0.6rem;
}

// speech bubble for answers
.speech-bubble-answer {
  position: relative;
}
.speech-bubble-answer:after {
  content: "";
  position: absolute;
  right: 0;
  top: 50%;
  width: 0;
  height: 0;
  border: 0.6rem solid transparent;
  border-left-color: $hu-grey-1;
  border-right: 0;
  margin-top: -0.6rem;
  margin-right: -0.6rem;
}
.avatar {
  font-size: 3rem;
  color: $hu-grey-1;
}

.page-link {
  cursor: pointer;
}

.progress-bar-img {
  background-image: url("../src/progress.svg");
  background-color: transparent;
}

.progress-img {
  background-image: url("../src/progress-bg.svg");
  background-color: transparent;
}

body {
  overflow-x: hidden;
}

.animate-label {
  animation-name: flash;
  animation-duration: 0.5s;
  animation-delay: 0.1s;
}

@keyframes flash {
  from,
  50%,
  to {
    opacity: 1;
  }

  25%,
  75% {
    opacity: 0;
  }
}

body::-webkit-scrollbar {
  width: 0.75rem;
  background-color: $hu-grey-1;
}
body::-webkit-scrollbar-track {
  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
  background-color: $hu-grey-1;
}
body::-webkit-scrollbar-thumb {
  background-color: $hu-green;
}
:root {
  scrollbar-color: $hu-green $hu-grey-1;
}

label.custom-file-label {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;

  &::after {
    // content: "📎";
    content: "";
    background: url("./iconmonstr-paperclip-2.svg") no-repeat center center
      #e9ecef; // #e9ecef is default
    padding: 0 1.5rem;
  }
}

// resize "buttons" on mobile for opinion scale
@media screen and (max-width: 1024px) {
  .page-link {
    padding: 4px 8px;
  }
}
@media screen and (max-width: 540px) {
  .page-link {
    padding: 3px;
  }
  .avatar {
    font-size: 2rem;
  }
}

